--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@size-limit/preset-small-lib": "^8.0.1",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
     "husky": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -59,6 +61,12 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "antd": "^4.22.8"
+    "@ant-design/pro-components": "^2.3.4",
+    "@easycrud/toolkits": "^0.1.0",
+    "@formily/antd": "^2.2.2",
+    "@formily/core": "^2.2.2",
+    "@formily/react": "^2.2.2",
+    "antd": "^4.22.8",
+    "moment": "^2.29.4"
   }
 }
