--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel index.html --no-cache",
     "build": "parcel build index.html"
   },
   "dependencies": {
@@ -12,13 +12,16 @@
   },
   "alias": {
     "react": "../node_modules/react",
-    "react-dom": "../node_modules/react-dom/profiling",
-    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
+    "react-dom": "../node_modules/react-dom",
+    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
+    "process": false
   },
   "devDependencies": {
+    "@parcel/transformer-less": "^2.7.0",
     "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.8.4",
-    "parcel": "^2.0.0-rc.0",
+    "@types/react-dom": "^16.9.16",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10",
     "typescript": "^3.4.5"
   }
 }
