--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@formily/core": "^2.2.2",
     "@formily/react": "^2.2.2",
     "antd": "^4.22.8",
+    "deepmerge": "^4.2.2",
     "moment": "^2.29.4"
   }
 }
