--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@size-limit/preset-small-lib": "^8.0.1",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-react-app": "^7.0.1",
     "husky": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
