--- a/example/package.json
+++ b/example/package.json
@@ -4,24 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html --no-cache",
-    "build": "parcel build index.html"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.0"
   },
-  "alias": {
-    "react": "../node_modules/react",
-    "react-dom": "../node_modules/react-dom",
-    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
-    "process": false
-  },
   "devDependencies": {
-    "@parcel/transformer-less": "^2.7.0",
+    "@types/node": "^18.11.9",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.16",
-    "parcel": "^2.7.0",
-    "process": "^0.11.10",
-    "typescript": "^3.4.5"
+    "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^3.4.5",
+    "vite": "^3.2.4"
   }
 }
